@@ -1,3 +1,10 @@
+2005-08-15  Dan Winship  <danw@novell.com>
+
+	* sample/opaquetest/Makefile.am (EXTRA_DIST): add missing files
+	(generated/*.cs): fix for srcdir!=builddir
+	* sample/valtest/Makefile.am (EXTRA_DIST): add missing files
+	(Valobj.cs): fix for srcdir!=builddir
+
 2005-08-15  Mike Kestner  <mkestner@novell.com>
 
 	* glib/Object.cs : hold strong refs for managed subclasses and
